--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -1,3 +1,6 @@
-memory_limit = 128M
-post_max_size = 100M
-upload_max_filesize = 20M
+memory_limit = 5000M
+upload_max_size = 640M
+post_max_size = 640M
+upload_max_filesize = 640M
+max_execution_time = 3000
+max_input_time = 1000
